--- a/CORPIN.html
+++ b/CORPIN.html
@@ -17,20 +17,20 @@
 background="https://img.freepik.com/free-vector/aesthetic-dreamy-background-purple-cloudy-sky-vector-glitter-design_53876-156334.jpg?semt=ais_hybrid&w=740&q=80">
 
 <tr bgcolor="white" align="center">
-<td><a href="https://siesie-1819.github.io/html_activity/cici%204.html" title="My First Favorite PETA"><img src="https://static.vecteezy.com/system/resources/previews/056/790/988/non_2x/kuromi-cute-purple-free-vector.jpg" width="200" height="200"></a><p>PETA 1</p></td>
+<td><a href="https://siesie-1819.github.io/html_activity/cici%204.html" target="_blank" title="My First Favorite PETA"><img src="https://static.vecteezy.com/system/resources/previews/056/790/988/non_2x/kuromi-cute-purple-free-vector.jpg" width="200" height="200"></a><p>PETA 1</p></td>
 
-<td><a href="https://siesie-1819.github.io/html_activity/cici%206.html" title="My Second Favorite PETA"><img src="https://images.seeklogo.com/logo-png/61/1/kuromi-logo-png_seeklogo-614444.png" width="200" height="200"></a><p>PETA 2</p></td>
+<td><a href="https://siesie-1819.github.io/html_activity/cici%206.html" target="_blank" title="My Second Favorite PETA"><img src="https://images.seeklogo.com/logo-png/61/1/kuromi-logo-png_seeklogo-614444.png" width="200" height="200"></a><p>PETA 2</p></td>
 
-<td><a href="https://siesie-1819.github.io/html_actvity/cici%203.html"title="My Third Favorite PETA"><img src="https://static.vecteezy.com/system/resources/previews/052/405/672/non_2x/melody-with-kuromi-free-vector.jpg" width="200" height="200"></a><p>PETA 3</p></td>
+<td><a href="https://siesie-1819.github.io/html_actvity/cici%203.html" target="_blank" title="My Third Favorite PETA"><img src="https://static.vecteezy.com/system/resources/previews/052/405/672/non_2x/melody-with-kuromi-free-vector.jpg" width="200" height="200"></a><p>PETA 3</p></td>
 </tr>
 
 
 <tr bgcolor="white" align="center">
-<td><a href="https://siesie-1819.github.io/html_activity/cici%209.html"title="My Fourth Favorite PETA"><img src="https://i.pinimg.com/564x/6d/d0/6a/6dd06a348acea015dab03b13ee104493.jpg" width="200" height="200" title="kurumi"></a><p>PETA 4</p></td>
+<td><a href="https://siesie-1819.github.io/html_activity/cici%209.html"target="_blank" title="My Fourth Favorite PETA"><img src="https://i.pinimg.com/564x/6d/d0/6a/6dd06a348acea015dab03b13ee104493.jpg" width="200" height="200" title="kurumi"></a><p>PETA 4</p></td>
 
-<td><a href="https://siesie-1819.github.io/html_activity/cici%2011.html"title="My Fifth Favorite PETA"><img src="https://i.pinimg.com/564x/1d/45/cd/1d45cdb4cf744b1f656eb11ce7cf3bb1.jpg" width="200" height="200" title="kurumi"></a><p>PETA 5</p></td>
+<td><a href="https://siesie-1819.github.io/html_activity/cici%2011.html"target="_blank" title="My Fifth Favorite PETA"><img src="https://i.pinimg.com/564x/1d/45/cd/1d45cdb4cf744b1f656eb11ce7cf3bb1.jpg" width="200" height="200" title="kurumi"></a><p>PETA 5</p></td>
 
-<td><a href="https://siesie-1819.github.io/html_activity/cici%2011.html"title="My Sixth Favorite PETA"><img src="https://static.vecteezy.com/system/resources/previews/052/405/686/non_2x/cute-kuromi-purple-free-vector.jpg" width="200" height="200" title="kurumi"></a><p>PETA 6</p></td>
+<td><a href="https://siesie-1819.github.io/html_activity/cici%2011.html"target="_blank" title="My Sixth Favorite PETA"><img src="https://static.vecteezy.com/system/resources/previews/052/405/686/non_2x/cute-kuromi-purple-free-vector.jpg" width="200" height="200" title="kurumi"></a><p>PETA 6</p></td>
 
 </tr>
 </table>
