--- a/CORPIN.html
+++ b/CORPIN.html
@@ -26,11 +26,11 @@ background="https://img.freepik.com/free-vector/aesthetic-dreamy-background-purp
 
 
 <tr bgcolor="white" align="center">
-<td><a href="https://siesie-1819.github.io/html_activity/cici%209.html"target="_blank" title="My Fourth Favorite PETA"><img src="https://i.pinimg.com/564x/6d/d0/6a/6dd06a348acea015dab03b13ee104493.jpg" width="200" height="200" title="kurumi"></a><p>PETA 4</p></td>
+<td><a href="https://siesie-1819.github.io/html_activity/cici%209.html"target="_blank" title="My Fourth Favorite PETA"><img src="https://i.pinimg.com/564x/6d/d0/6a/6dd06a348acea015dab03b13ee104493.jpg" width="200" height="200"></a><p>PETA 4</p></td>
 
-<td><a href="https://siesie-1819.github.io/html_activity/cici%2011.html"target="_blank" title="My Fifth Favorite PETA"><img src="https://i.pinimg.com/564x/1d/45/cd/1d45cdb4cf744b1f656eb11ce7cf3bb1.jpg" width="200" height="200" title="kurumi"></a><p>PETA 5</p></td>
+<td><a href="https://siesie-1819.github.io/html_activity/cici%2011.html"target="_blank" title="My Fifth Favorite PETA"><img src="https://i.pinimg.com/564x/1d/45/cd/1d45cdb4cf744b1f656eb11ce7cf3bb1.jpg" width="200" height="200"></a><p>PETA 5</p></td>
 
-<td><a href="https://siesie-1819.github.io/html_activity/cici%2011.html"target="_blank" title="My Sixth Favorite PETA"><img src="https://static.vecteezy.com/system/resources/previews/052/405/686/non_2x/cute-kuromi-purple-free-vector.jpg" width="200" height="200" title="kurumi"></a><p>PETA 6</p></td>
+<td><a href="https://siesie-1819.github.io/html_activity/cici%2011.html"target="_blank" title="My Sixth Favorite PETA"><img src="https://static.vecteezy.com/system/resources/previews/052/405/686/non_2x/cute-kuromi-purple-free-vector.jpg" width="200" height="200"></a><p>PETA 6</p></td>
 
 </tr>
 </table>
