--- a/cassie 3.html
+++ b/cassie 3.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About ME</title>
+<title>header</title>
 </head>
-<body background="https://wallpapers.com/images/hd/purple-and-gold-background-j9lcvsmlcxykh6td.jpg" align="center">
-<h1>🖼️ My Image Gallery</h1>
-<p>Each image below is a clickable hyperlink.</p>
-<table border="2" bordercolor="white" align="center">
-<tr>
-<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3cZP7bGqm5f0Xjk_OxSNra3rJ1sfTRGpf7QrbVMkGrnB3RdVBl2E2xE_UIK3xnl_4RXg&usqp=CAU"><a href="https://www.google.com/">Google</a></td>
-<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_zDpx1ZDp0V15kwGNnTcXd44ZPcqJl3x2HQ&s"><a href="https://www.wikipedia.org/">Wikipedia</a></td>
-<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgd-nf45w8vq-NqpmyL_UOhLluI6UsB5mKMg&s"><a href="https://www.canva.com/en_ph/">Canva</a></td>
-</table>
-<h2>📂 File Download</h2>
-<a href="file:///C:/Users/Administrator/Downloads/MySampleFile%20(3).pdf">Click here to download a sample PDF</a>
-<p><a href="My Connected Web.html" title="Go Back to Home Page">🏠Home<a/> |<a href="https://annsonjm-blip.github.io/htmlactivity/html/gallery.html" title="Learn About Me"> 👤 About</a>
+<body>
+<h1 style="color:  #97598d ; font-family: 'Brush Script MT">Welcome to My Digital Cookbook</h1>
+<p>Click a category on the left view delicious recipes!</p>
+​
+</body>
+</html>
