--- a/cassie 1.html
+++ b/cassie 1.html
@@ -3,7 +3,7 @@
 <head>
 <title>header</title>
 </head>
-<body bgcolor="#a69ee9" align="center">
+<body background="https://images.stockcake.com/public/7/d/7/7d70c6bd-0f35-4cca-b5ec-4e3f1f996dc2_large/lavender-field-sunset-stockcake.jpg" align="center">
 <h1 style="color:  #5B455E ; text-align: center; font-family: 'Brush Script MT'; font-size: 50px;">🍳 My Digital Cookbook</h1>
 <p>Delicous Recipe to Explore</p>
 </body>
