--- a/cassie main.html
+++ b/cassie main.html
@@ -5,12 +5,12 @@
 </head>
 ​
 <frameset rows="20%,60%,20%">
-<frame src="https://siesie-1819.github.io/html_activity/cassie%201.html">
+<frame src="https://siesie-1819.github.io/html_activity/cassie%201.html"name="header">
 <frameset cols="20%,80%">
-<frame src="https://siesie-1819.github.io/html_activity/cassie%202.html">
-<frame src="https://siesie-1819.github.io/html_activity/cassie%203.html">
+<frame src="https://siesie-1819.github.io/html_activity/cassie%202.html" name="menu">
+<frame src="https://siesie-1819.github.io/html_activity/cassie%203.html" name="home">
 </frameset>
-<frame src="https://siesie-1819.github.io/html_activity/cassie%204.html">
+<frame src="https://siesie-1819.github.io/html_activity/cassie%204.html" name="footer">
 ​
 ​
 </frameset>
@@ -18,4 +18,5 @@
 </frameset>
 ​
 </html>
+
 ​
