--- a/cassie 2.html
+++ b/cassie 2.html
@@ -6,13 +6,13 @@
 <body bgcolor="#c1a4c9">
 <h2 style="color:  #97598d ; font-family: 'Brush Script MT">📖 Categories</h2>
 <ul>
-<li><a href="">Home</a></li>
-<li><a href="">Breakfast</a></li>
-<li><a href="">Lunch</a></li>
-<li><a href="">Dinner</a></li>
-<li><a href="">Dessert</a></li>
-<li><a href="">Midnight Snack</a></li>
+<li><a href="https://siesie-1819.github.io/html_activity/cassie%203.html" target="home">Home</a></li>
+<li><a href="https://siesie-1819.github.io/html_activity/cassie%207.html" target="home">Breakfast</a></li>
+<li><a href="https://siesie-1819.github.io/html_activity/cassie%209.html" target="home">Lunch</a></li>
+<li><a href="https://siesie-1819.github.io/html_activity/cassie%2011.html" target="home">Dinner</a></li>
+<li><a href="https://siesie-1819.github.io/html_activity/cassie%2013.html" target="home" >Dessert</a></li>
+<li><a href="https://siesie-1819.github.io/html_activity/cassie%2015.html" target="home">Midnight Snack</a></li>
 </ul>
+
 </body>
 </html>
-
