Update cassie main 2.html

--- a/cassie main 2.html
+++ b/cassie main 2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Frameset</title>
+<title>Corpin_CookbookFrames
+</title>
 </head>
 ​
 <frameset rows="20%,60%,20%">
@@ -14,4 +15,5 @@
 ​</frameset>
 ​
 </html>
+
 
