--- a/cassie 10.html
+++ b/cassie 10.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 
-<img src="https://www.unileverfoodsolutions.com.ph/dam/global-ufs/mcos/sea/philippines/acm/recipe/2023/grilled-boneless-bangus-with-green-tomato-salad/inihaw-na-bangus-grilled-boneless-bangus-preview.jpg" alt="Beef steak" width="400" height="500">
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSL3BiyVswnVMYKC78IAPLj1nbH9Md3y5KkOw&s" alt="Beef steak" width="400" height="500">
-<img src="https://www.fishtaseafood.com/cdn/shop/files/BangusforGrillingCooked_1024x.png?v=1723775412" alt="Beef steak" width="400" height="500"
+<img src="https://www.unileverfoodsolutions.com.ph/dam/global-ufs/mcos/sea/philippines/acm/recipe/2023/grilled-boneless-bangus-with-green-tomato-salad/inihaw-na-bangus-grilled-boneless-bangus-preview.jpg" alt="Inihaw na Bungus" width="400" height="500">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSL3BiyVswnVMYKC78IAPLj1nbH9Md3y5KkOw&s" alt="Inihaw na Bangus" width="400" height="500">
+<img src="https://www.fishtaseafood.com/cdn/shop/files/BangusforGrillingCooked_1024x.png?v=1723775412" alt="Inihaw na Bangus" width="400" height="500"
 </body>
 
 </html>
+
