--- a/cassie 9.html
+++ b/cassie 9.html
@@ -6,7 +6,7 @@
 <body bgcolor="#c1a4c9">
 <h1 style="color:  #97598d">Beef Steak (Bistek in Tagalog)</h1>
 
-<iframe src="https://siesie-1819.github.io/html_activity/cassie%208.html" height="500" width="400"></iframe>
+<iframe src="https://siesie-1819.github.io/html_activity/cassie%208.html" height="500" width="400" align="right"></iframe>
 
 <h2 style="color:  #97598d">Ingredients</h2>
 <ul>
@@ -34,4 +34,5 @@
 <p>Bistek Tagalog — savory, tangy, and perfect with rice.</p>
 
 </body>
+
 </html>
