--- a/cassie 7.html
+++ b/cassie 7.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="#c1a4c9">
 <h1 style="color:  #97598d">Champorado</h1>
-<iframe src="https://siesie-1819.github.io/html_activity/cassie%206.html" height="500" width="400"></iframe>
+<iframe src="https://siesie-1819.github.io/html_activity/cassie%206.html" height="500" width="400 align="right"></iframe>
 
     <h2 style="color:  #97598d">Ingredients</h2>
     <ul>
@@ -30,4 +30,5 @@
      <p>Simple Champorado — quick, cozy, and chocolatey.</p>
 </body>
 </html>
+
 
