--- a/cassie 11.html
+++ b/cassie 11.html
@@ -6,7 +6,7 @@
 <body bgcolor="#c1a4c9">
 <h1 style="color:  #97598d">Inihaw na Bangus</h1>
 
-<iframe src="https://siesie-1819.github.io/html_activity/cassie%2010.html" height="500" width="400"></iframe>
+<iframe src="https://siesie-1819.github.io/html_activity/cassie%2010.html" height="500" width="400 align="right"></iframe>
 
 <h2 style="color:  #97598d">Ingredients</h2>
 <ul>
@@ -35,3 +35,4 @@
 </body>
 
 </html>
+
