--- a/cassie 13.html
+++ b/cassie 13.html
@@ -6,7 +6,7 @@
 <body bgcolor="#c1a4c9">
 <h1 style="color:  #97598d">Halo-Halo</h1>
 
-<iframe src="https://siesie-1819.github.io/html_activity/cassie%2012.html" height="500" width="400"></iframe>
+<iframe src="https://siesie-1819.github.io/html_activity/cassie%2012.html" height="500" width="400" align="right"></iframe>
 
 <h2 style="color:  #97598d">Ingredients</h2>
 <ul>
@@ -36,4 +36,5 @@
 <p>Halo-Halo — colorful, creamy, and the perfect pang-init!</p>
 
 </body>
+
 </html>
