--- a/cassie 15.html
+++ b/cassie 15.html
@@ -6,7 +6,7 @@
 <body bgcolor="#c1a4c9">
 <h1 style="color:  #97598d">Itlog with Pancit Canton</h1>
 
-<iframe src="https://siesie-1819.github.io/html_activity/cassie%2014.html" height="500" width="400"></iframe>
+<iframe src="https://siesie-1819.github.io/html_activity/cassie%2014.html" height="500" width="400" align="right"></iframe>
 
 <h2 style="color:  #97598d">Ingredients</h2>
 <ul>
@@ -39,5 +39,6 @@
 
 </body>
 </html>
+
 
 
