--- a/cassie_corpin 3.html
+++ b/cassie_corpin 3.html
@@ -5,7 +5,7 @@
 
 <h2>Tech Innovators Club Registration Form</h2>
 
-<form action="confirmation.html" method="post">
+<form action="https://siesie-1819.github.io/html_activity/cassie_corpin%202.html" method="post">
 
 <fieldset>
 <legend>Personal Information</legend>
@@ -65,4 +65,5 @@
 </form>
 
 </body>
+
 </html>
