--- a/cassie_corpin 3.html
+++ b/cassie_corpin 3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>Tech Innovators Club - Registration Form</title></head>
-<body>
+<body bgcolor="#6495ED">
 
 <h2>Tech Innovators Club Registration Form</h2>
 
@@ -67,3 +67,4 @@
 </body>
 
 </html>
+
