--- a/cassie_corpin 3.html
+++ b/cassie_corpin 3.html
@@ -3,7 +3,7 @@
 <head><title>Tech Innovators Club - Registration Form</title></head>
 <body bgcolor="#6495ED">
 
-<h2>Tech Innovators Club Registration Form</h2>
+<h2 align="center" color-text="#1F51FF">Tech Innovators Club Registration Form</h2>
 
 <form action="https://siesie-1819.github.io/html_activity/cassie_corpin%202.html" method="post">
 
@@ -67,4 +67,5 @@
 </body>
 
 </html>
+
 
