--- a/cassie_corpin 2.html
+++ b/cassie_corpin 2.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head><title>Registration Successful</title></head>
-<body>
-<h2>Thank you for registering!</h2>
-<p>Your form has been submitted.</p>
+<body bgcolor="#6495ED" align="center">
+<h2 text-color="#87CEEB">Thank you for registering!</h2>
+<p color="#40E0D0">Your form has been submitted.</p>
 </body>
+
 </html>
