--- a/cassie 4.html
+++ b/cassie 4.html
@@ -1,26 +1,24 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>WEB PAGE</title>
+<title>Connected Web</title>
 </head>
-<body background="https://thumb.photo-ac.com/57/5768777867f98cb7366d441bd26adb12_t.jpeg" align="center">
-​
-<h1 align="center">🌐 Welcome to My Connected Web</h1>
-<p align="center">This website demonstrates advanced hyperlinks using only HTML.</p>
+<body background="https://wallpapers.com/images/hd/purple-and-gold-background-j9lcvsmlcxykh6td.jpg" align="center">
+<h1 id="top">🌐 Welcome to My Connected Web</h1>
+<p >This website demonstrates advanced hyperlinks using only HTML.</p>
 <hr width="2000" size="2">
-<h2 align="center">🔗 Navigation Links</h2>
-<p align="center"><a href="">About Me<a/> |<a href="" title="learn more about me"> Gallery </a>|<a href=""> Go to Footer</a>
+<h2>🔗 Navigation Links</h2>
+<p><a href="https://siesie-1819.github.io/html_activity/cassie%202.html" title="learn more about me">About Me<a/> |<a href="https://siesie-1819.github.io/html_activity/cassie%203.html" title="View my Image Gallery"> Gallery </a>|<a href="#footer" title="Jump to Bottom Selection"> Go to Footer</a>
 <hr width="2000" size="2">
 <h2 align="center">📎 External Resources</h2>
-<a href=""><p align="center">Visit W3Schools</p></a>
-<a href=""><p align="center">MDN Web Docs</p></a>
+<a href="https://www.w3schools.com/" title="Learn HTML Here!" target="_blank"><p>Visit W3Schools</p></a>
+<a href="https://developer.mozilla.org/en-US/" title="Learn from MDN Web Docs" target="_blank"><p>MDN Web Docs</p></a>
 <hr width="2000" size="2">
-<h2 align="center">📧 Contact Me</h2>
-<p>You can send me an email here:<a href="mailto:160030corpin@depedmarikina.ph">160030corpin@depedmarikina.ph</a></p>
+<h2>📧 Contact Me</h2>
+<p>You can send me an email here:<a href="mailto:160030corpin@depedmarikina.ph" title="Send me an Email">160030corpin@depedmarikina.ph</a></p>
 <hr width="2000" size="2">
-<h2 align="center">🔽 Bottom of the Page</h2>
-<a href=""><p align="center">Go Back to Top</p></a>
-<blackquote align="center">© 2025 My Connected Web</blackquote>
-​
+<h2>🔽 Bottom of the Page</h2>
+<a href="#top" title="Return to the Top of Page"><p>Go Back to Top</p></a>
+<blackquote>© 2025 My Connected Web</blackquote>
 </body>
 </html>
