--- a/new 1.html
+++ b/new 1.html
@@ -25,7 +25,8 @@
         <li>Millions of A’TIN worldwide</li>
     </ul>
 
-    <a href="index.html">Back to Home</a>
+    <a href="https://siesie-1819.github.io/html_activity/new%202.html">Back to Home</a>
 
 </body>
+
 </html>
