--- a/new 2.html
+++ b/new 2.html
@@ -16,7 +16,8 @@
     </ul>
 
     <p>Click below to know more about them:</p>
-    <a href="about.html">Go to About Page</a>
+    <a href="https://siesie-1819.github.io/html_activity/new%201.html">Go to About Page</a>
 
 </body>
+
 </html>
