--- a/new 6.html
+++ b/new 6.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head><title>Registration Form</title></head>
 <body bgcolor="#B0E0E6">
@@ -54,4 +54,5 @@
 </form>
 
 </body>
+
 </html>
