--- a/new 8.html
+++ b/new 8.html
@@ -5,7 +5,8 @@
 <title>header</title>
 </head>
 <body bgcolor="#6495ED" align="center">
-<image src="https://images.seeklogo.com/logo-png/50/2/sb19-logo-png_seeklogo-505615.png" width=" 190" height="190 " align="left">
-<h1 style="color:  #004687 ; font-family: 'Brush Script MT'; font-size: 100px;">SB19 Official Fan Forms</h1><a href="https://siesie-1819.github.io/html_activity/new%202.html">Home |</a><a href="https://siesie-1819.github.io/html_activity/new%201.html"> About</a></p>
+<image src="https://images.seeklogo.com/logo-png/50/2/sb19-logo-png_seeklogo-505615.png" width=" 120" height="120 " align="left">
+<h1 style="color:  #004687 ; font-family: 'Brush Script MT'; font-size: 90px;">SB19 Official Fan Forms</h1><a href="https://siesie-1819.github.io/html_activity/new%202.html" target="home">Home |</a><a href="https://siesie-1819.github.io/html_activity/new%201.html" target="home"> About</a></p>
 </body>
 </html>
+ 
