--- a/new 2.html
+++ b/new 2.html
@@ -7,6 +7,7 @@
 
     <h1 style="color:  #004687 ; font-family: Verdana">Welcome to My SB19 Page</h1>
     <p>Welcome! This is a simple page about SB19.</p>
+    <iframe src="https://siesie-1819.github.io/html_activity/NEW%2011.html" width="400" height="500" align="right"></iframe>
 
     <h2 style="color:  #004687 ; font-family: Verdana">Highlights</h2>
     <ul>
@@ -19,4 +20,5 @@
 </body>
 
 </html>
+
 
