--- a/new 1.html
+++ b/new 1.html
@@ -7,6 +7,7 @@
 
     <h1 style="color:  #004687 ; font-family: Verdana">About SB19</h1>
     <p>SB19 is a Filipino boy group known for their talent, passion, and global impact.</p>
+    <iframe src="https://siesie-1819.github.io/html_activity/NEW%2011.html" width="400" height="500" align="right"></iframe>
 
     <h2 style="color:  #004687 ; font-family: Verdana">Members</h2>
     <ul>
@@ -30,3 +31,4 @@
 </body>
 
 </html>
+
