--- a/cassie 4.html
+++ b/cassie 4.html
@@ -8,7 +8,7 @@
 <p >This website demonstrates advanced hyperlinks using only HTML.</p>
 <hr width="2000" size="2">
 <h2>🔗 Navigation Links</h2>
-<p><a href="https://siesie-1819.github.io/html_activity/eis%201.html" title="learn more about me">About Me<a/> |<a href="https://siesie-1819.github.io/html_activity/cassie%203.html" title="View my Image Gallery"> Gallery </a>|<a href="#footer" title="Jump to Bottom Selection"> Go to Footer</a>
+<p><a href="https://siesie-1819.github.io/html_activity/eis%202.html" title="learn more about me">About Me<a/> |<a href="https://siesie-1819.github.io/html_activity/eis%201.html" title="View my Image Gallery"> Gallery </a>|<a href="#footer" title="Jump to Bottom Selection"> Go to Footer</a>
 <hr width="2000" size="2">
 <h2 align="center">📎 External Resources</h2>
 <a href="https://www.w3schools.com/" title="Learn HTML Here!" target="_blank"><p>Visit W3Schools</p></a>
@@ -22,4 +22,5 @@
 <blackquote>© 2025 My Connected Web</blackquote>
 </body>
 </html>
+
 
