--- a/eis 1.html
+++ b/eis 1.html
@@ -15,6 +15,7 @@
 </table>
 <h2>📂 File Download</h2>
 <a href="file:///C:/Users/Administrator/Downloads/MySampleFile%20(3).pdf">Click here to download a sample PDF</a>
-<p><a href="My Connected Web.html" title="Go Back to Home Page">🏠Home<a/> |<a href="https://annsonjm-blip.github.io/htmlactivity/html/gallery.html" title="Learn About Me"> 👤 About</a>
+<p><a href="https://siesie-1819.github.io/html_activity/cassie%204.html" title="Go Back to Home Page">🏠Home<a/> |<a href="https://siesie-1819.github.io/html_activity/eis%202.html" title="Learn About Me"> 👤 About</a>
 </body>
 </html>
+
