--- a/eis 2.html
+++ b/eis 2.html
@@ -9,8 +9,7 @@
 <h2>💡 My Favorites </h2>
 <p><a href="https://www.youtube.com/" target="_blank" title="Watch Videos">Youtube<a/> |<a href="https://www.canva.com/en_ph/" target="_blank" title="Design Creatively"> Canva </a>|<a href="https://github.com/" target="_blank" title="Explore Coding Projects"> GitHub</a>
 <hr width="2000" size="2">
-<p><a href="My Connected Web.html" title="https://siesie-1819.github.io/html_activity/cassie%204.html">🏠 Return to Home<a/> |<a href="https://siesie-1819.github.io/html_activity/eis%201.html" title="Go to Gallery Page"> 🖼️ Visit Gallery </a>
+<p><a href="https://siesie-1819.github.io/html_activity/cassie%204.html" title="Go Back to Home Page">🏠 Return to Home<a/> |<a href="https://annsonjm-blip.github.io/htmlactivity/html/gallery.html" title="Go to Gallery Page"> 🖼️ Visit Gallery </a>
 <p>Created by Cassie</p>
 </body>
-
 </html>
