--- a/eis 1.html
+++ b/eis 1.html
@@ -8,9 +8,9 @@
 <p>Each image below is a clickable hyperlink.</p>
 <table border="2" bordercolor="white" align="center">
 <tr>
-<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3cZP7bGqm5f0Xjk_OxSNra3rJ1sfTRGpf7QrbVMkGrnB3RdVBl2E2xE_UIK3xnl_4RXg&usqp=CAU"><a href="https://www.google.com/">Google</a></td>
-<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_zDpx1ZDp0V15kwGNnTcXd44ZPcqJl3x2HQ&s"><a href="https://www.wikipedia.org/">Wikipedia</a></td>
-<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgd-nf45w8vq-NqpmyL_UOhLluI6UsB5mKMg&s"><a href="https://www.canva.com/templates">Canva</a></td>
+<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3cZP7bGqm5f0Xjk_OxSNra3rJ1sfTRGpf7QrbVMkGrnB3RdVBl2E2xE_UIK3xnl_4RXg&usqp=CAU"><br><a href="https://www.google.com/">Google</a></td>
+<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_zDpx1ZDp0V15kwGNnTcXd44ZPcqJl3x2HQ&s"><br><a href="https://www.wikipedia.org/">Wikipedia</a></td>
+<td bgcolor="white"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgd-nf45w8vq-NqpmyL_UOhLluI6UsB5mKMg&s"><br><a href="https://www.canva.com/templates">Canva</a></td>
 </tr>
 </table>
 <h2>📂 File Download</h2>
@@ -18,4 +18,5 @@
 <p><a href="https://siesie-1819.github.io/html_activity/cassie%204.html" title="Go Back to Home Page">🏠Home<a/> |<a href="https://siesie-1819.github.io/html_activity/eis%202.html" title="Learn About Me"> 👤 About</a>
 </body>
 </html>
+
 
