--- a/Corpin_CookBookFrames.html
+++ b/Corpin_CookBookFrames.html
@@ -10,9 +10,10 @@
 <frame src="https://siesie-1819.github.io/html_activity/cassie%202.html" name="menu">
 <frame src="https://siesie-1819.github.io/html_activity/cassie%203.html" name="home">
 </frameset>
-<frame src="https://siesie-1819.github.io/html_activity/cassie%204.html" name="footer">
+<frame src="https://siesie-1819.github.io/html_activity/eis%203.html" name="footer">
 </frameset>
 
 </html>
+
 
 
