--- a/cass4.html
+++ b/cass4.html
@@ -6,7 +6,8 @@
 
 <frameset rows="25%,75%">
     <frame src="nav.html" noresize>
-    <frame src="home.html" name="content">
+    <frame src="https://siesie-1819.github.io/html_activity/cass3.css" name="content">
 </frameset>
 
 </html>
+
