--- a/a portal.html
+++ b/a portal.html
@@ -21,7 +21,7 @@
 <body>
 
 <nav>
-  <a href="index.html">The Portal</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20portal.html">The Portal</a>
   <a href="story.html">The Tale</a>
   <a href="about.html">Behind the Legend</a>
   <a href="profile.html">Meet the Author</a>
@@ -66,3 +66,4 @@
 </div>
 </body>
 </html>
+
