Update navigation links and content in lagend.html

--- a/a lagend.html
+++ b/a lagend.html
@@ -47,7 +47,7 @@
 <body>
 
 <nav>
-  <a href="index.html">https://siesie-1819.github.io/html_activity/a%20portal.html</a>
+  <a href="index.html">The Portal</a>
   <a href="story.html">The Tale</a>
   <a href="about.html">Behind the Legend</a>
   <a href="profile.html">Meet the Author</a>
@@ -128,5 +128,4 @@
 </div>
 
 </body>
-
 </html>
