--- a/a portal.html
+++ b/a portal.html
@@ -22,7 +22,7 @@
 
 <nav>
   <a href="https://siesie-1819.github.io/html_activity/a%20portal.html">The Portal</a>
-  <a href="story.html">The Tale</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20tale.html">The Tale</a>
   <a href="about.html">Behind the Legend</a>
   <a href="profile.html">Meet the Author</a>
 </nav>
@@ -66,4 +66,5 @@
 </div>
 </body>
 </html>
+
 
