--- a/a lagend.html
+++ b/a lagend.html
@@ -49,7 +49,7 @@
 <nav>
   <a href="index.html">The Portal</a>
   <a href="story.html">The Tale</a>
-  <a href="about.html">Behind the Legend</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20tale.html">Behind the Legend</a>
   <a href="profile.html">Meet the Author</a>
 </nav>
 
@@ -129,3 +129,4 @@
 
 </body>
 </html>
+
