--- a/a portal.html
+++ b/a portal.html
@@ -23,8 +23,8 @@
 <nav>
   <a href="https://siesie-1819.github.io/html_activity/a%20portal.html">The Portal</a>
   <a href="https://siesie-1819.github.io/html_activity/a%20tale.html">The Tale</a>
-  <a href="about.html">Behind the Legend</a>
-  <a href="profile.html">Meet the Author</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20lagend.html">Behind the Legend</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20author.html">Meet the Author</a>
 </nav>
 
 <div class="header" style="background-image:url('https://i.pinimg.com/1200x/f8/95/3a/f8953a78acbff6ecb2d49da8d74e3dee.jpg');">
@@ -66,5 +66,6 @@
 </div>
 </body>
 </html>
+
 
 
