--- a/a tale.html
+++ b/a tale.html
@@ -78,10 +78,10 @@
 <body>
 
 <nav>
-  <a href="index.html">The Portal</a>
-  <a href="story.html">The Tale</a>
-  <a href="about.html">Behind the Legend</a>
-  <a href="profile.html">Meet the Author</a>
+<a href="https://siesie-1819.github.io/html_activity/a%20portal.html">The Portal</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20tale.html">The Tale</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20lagend.html">Behind the Legend</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20author.html">Meet the Author</a>
 </nav>
 
 <header class="header" style="background-image:url('https://i.pinimg.com/736x/a7/7f/3b/a77f3b0b96c31603a4dee2fa85f4e22c.jpg');">
@@ -241,3 +241,4 @@
 
 </body>
 </html>
+
