--- a/a lagend.html
+++ b/a lagend.html
@@ -47,10 +47,10 @@
 <body>
 
 <nav>
-  <a href="index.html">The Portal</a>
-  <a href="story.html">The Tale</a>
-  <a href="https://siesie-1819.github.io/html_activity/a%20tale.html">Behind the Legend</a>
-  <a href="profile.html">Meet the Author</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20portal.html">The Portal</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20tale.html">The Tale</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20lagend.html">Behind the Legend</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20author.html">Meet the Author</a>
 </nav>
 
 <header class="header" style="background-image:url('https://i.pinimg.com/1200x/b8/18/6e/b8186e9b2ae86752cf1bf2aef61d38e6.jpg');">
@@ -129,4 +129,5 @@
 
 </body>
 </html>
+
 
