--- a/a author.html
+++ b/a author.html
@@ -47,10 +47,10 @@
 <body>
 
 <nav>
-  <a href="https://siesie-1819.github.io/html_activity/a%20portal.html">The Portal</a>
-  <a href="story.html">The Tale</a>
-  <a href="about.html">Behind the Legend</a>
-  <a href="profile.html">Meet the Author</a>
+ <a href="https://siesie-1819.github.io/html_activity/a%20portal.html">The Portal</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20tale.html">The Tale</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20lagend.html">Behind the Legend</a>
+  <a href="https://siesie-1819.github.io/html_activity/a%20author.html">Meet the Author</a>
 </nav>
 
 <header class="header" style="background-image:url('https://i.pinimg.com/1200x/4b/c4/65/4bc4651c0dbedb823162e5fe4616a1e9.jpg');">
@@ -109,3 +109,4 @@
 </body>
 
 </html>
+
