--- a/blog home.html
+++ b/blog home.html
@@ -15,16 +15,20 @@
 
 <div class="header">
 <h1>SB19 Fan Blog</h1>
-<p>Inspired by <span>music</span>, <span>dreams</span>, and <span>SB19</span></p>
+<p>Inspired by <span>music</span>, <span>dreams</span>, and <span>Filipino pride</span></p>
 </div>
 
 <div class="content">
 <p>
-Welcome to my personal SB19 fan blog. This site was created as a school project, but it also represents my <span>admiration</span> for a group that inspires many Filipino youths.
+Welcome to my personal blog dedicated to <span>SB19</span>. This website was created as part of a school project, but it also reflects my genuine admiration for a group that inspires many young people today.
 </p>
 
 <p>
-SB19’s journey reminds me that success requires <span>hard work</span>, <span>confidence</span>, and patience. Their music motivates me during stressful school days.
+SB19’s journey shows the importance of <span>hard work</span>, <span>patience</span>, and believing in yourself. Their music gives me <span>motivation</span> whenever I feel tired or pressured by school and daily life.
+</p>
+
+<p>
+Through this blog, I want to share how SB19’s story encourages me to stay focused on my <span>goals</span>, appreciate meaningful music, and remain confident in my own abilities.
 </p>
 
 <div class="video-box">
@@ -32,9 +36,11 @@ SB19’s journey reminds me that success requires <span>hard work</span>, <span>
 </div>
 </div>
 
+
 <footer>
 © 2026 SB19 A'tin Blog
 </footer>
 
 </body>
+
 </html>
