--- a/blog post.html
+++ b/blog post.html
@@ -7,10 +7,10 @@
 <body style="background-image:url('https://i.pinimg.com/736x/3e/7c/59/3e7c59489d994f56483f0070cbf3bb00.jpg');">
 
 <nav>
-<a href="home.html">Home</a>
-<a href="posts.html">Posts</a>
-<a href="gallery.html">Gallery</a>
-<a href="about.html">About Me</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
 </nav>
 <div class="header">
 <h1>Blog Posts</h1>
@@ -49,4 +49,5 @@ Listening to their songs gives me strength during stressful days and reminds me 
 </footer>
 
 </body>
+
 </html>
