--- a/blog gallary.html
+++ b/blog gallary.html
@@ -8,10 +8,10 @@
 
 
 <nav>
-<a href="home.html">Home</a>
-<a href="posts.html">Posts</a>
-<a href="gallery.html">Gallery</a>
-<a href="about.html">About Me</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
 </nav>
 
 <div class="header">
@@ -43,4 +43,5 @@
 </footer>
 
 </body>
+
 </html>
