--- a/blog post.html
+++ b/blog post.html
@@ -25,9 +25,7 @@
 <img src="https://i.pinimg.com/1200x/a0/0a/0d/a00a0d09d288df888246f88fc18ee037.jpg">
 <p>
 SB19 is more than just a music group to me. They represent <span>hard work</span>, <span>discipline</span>, and the courage to chase dreams even when the path is difficult.
-</p>
-<p>
-As a student, their story motivates me to stay focused on my <span>goals</span> and reminds me that every small effort matters.
+<br>As a student, their story motivates me to stay focused on my <span>goals</span> and reminds me that every small effort matters.
 </p>
 </div>
 
@@ -36,10 +34,8 @@ As a student, their story motivates me to stay focused on my <span>goals</span> 
 <p><span>May 2025</span></p>
 <img src="https://i.pinimg.com/1200x/b3/62/eb/b362ebbbf6704941f9e7a2d0f2fe534b.jpg">
 <p>
-What I love most about SB19’s songs is the meaning behind the lyrics. Their music talks about <span>self-confidence</span>, <span>hope</span>, and believing in yourself.
-</p>
-<p>
-Listening to their songs gives me strength during stressful days and reminds me that I am not alone in my journey.
+What I love most about SB19’s songs is the meaning behind the lyrics. Their music talks about <span>self-confidence</span>, <span>hope</span>, and believing in yourself.<br>
+  Listening to their songs gives me strength during stressful days and reminds me that I am not alone in my journey.
 </p>
 </div>
 
@@ -52,4 +48,5 @@ Listening to their songs gives me strength during stressful days and reminds me 
 </body>
 
 </html>
+
 
