--- a/blog abut me.html
+++ b/blog abut me.html
@@ -8,7 +8,7 @@
 <body style="background-image:url('https://i.pinimg.com/736x/5e/7c/cb/5e7ccbb856ee1bb586fbae3fc50ef29c.jpg');">
 
 <nav>
-<a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20home.html" class="active">Home</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
@@ -44,4 +44,5 @@ I created this blog as part of a school project and as a personal space to expre
 </body>
 
 </html>
+
 
