--- a/blog gallary.html
+++ b/blog gallary.html
@@ -9,8 +9,8 @@
 
 <nav>
 <a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
-<a href="https://siesie-1819.github.io/html_activity/blog%20post.html" class="active">Posts</a>
-<a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html" class="active">Gallery</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
 </nav>
 
@@ -45,4 +45,5 @@
 </body>
 
 </html>
+
 
