--- a/blog home.html
+++ b/blog home.html
@@ -7,7 +7,7 @@
 <body style="background-image:url('https://i.pinimg.com/736x/5f/19/e2/5f19e20f63d1bab78b555b5d09eafe78.jpg');">
 
 <nav>
-<a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20home.html" class="active">Home</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
@@ -44,6 +44,7 @@ Through this blog, I want to share how SB19’s story encourages me to stay focu
 </body>
 
 </html>
+
 
 
 
