--- a/blog post.html
+++ b/blog post.html
@@ -8,7 +8,7 @@
 
 <nav>
 <a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
-<a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
+<a href="https://siesie-1819.github.io/html_activity/blog%20post.html"class="active">Posts</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
 <a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
 </nav>
@@ -48,5 +48,6 @@ What I love most about SB19’s songs is the meaning behind the lyrics. Their mu
 </body>
 
 </html>
+
 
 
