--- a/blog gallary.html
+++ b/blog gallary.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
-<html>
 <head>
-<title>SB19 Gallery</title>
-<link rel="stylesheet" href="https://siesie-1819.github.io/html_activity/blog%20css.css">
+  <title>Gallery | SB19 Personal Blog</title>
+  <link rel="stylesheet" href="https://siesie-1819.github.io/html_activity/blog%20css.css">
 </head>
-<body style="background-image:url('https://i.pinimg.com/736x/6b/15/db/6b15db4838fac883b77529a074e2aa20.jpg');">
 
+<body style="background-image:url('https://i.pinimg.com/736x/bd/5a/34/bd5a343cf6c78b509d262e18cbcd94e8.jpg');">
 
-<nav>
-<a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
-<a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
-<a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html" class="active">Gallery</a>
-<a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
-</nav>
+  <nav>
+    <a href="home.html">Home</a>
+    <a href="posts.html">Posts</a>
+    <a href="gallery.html" class="active">Gallery</a>
+    <a href="about.html">About Me</a>
+  </nav>
 
-<div class="header">
-<h1>Gallery</h1>
-<p>SB19 eras that define their <span>journey</span></p>
-</div>
+  <header>
+    <div class="header-box">
+      <h1>SB19 Albums</h1>
+      <p>The eras that shaped their journey</p>
+    </div>
+  </header>
 
-<div class="content gallery">
+  <main class="container">
+    <div class="content-box">
 
-<div class="gallery-item">
-<img src="https://i.pinimg.com/736x/8a/ef/e6/8aefe6df2903758df302f97a24976592.jpg">
-<p><span>Pagsibol</span> – The era that showed growth, passion, and stronger identity.</p>
-</div>
+      <div class="gallery">
 
-<div class="gallery-item">
-<img src="https://i.pinimg.com/1200x/4f/48/4e/4f484e1b2f9fe2022d340da8570a3f51.jpg">
-<p><span>Pagtatag</span> – A powerful chapter that proved confidence and unity.</p>
-</div>
+        <div class="gallery-item">
+          <img src="https://i.pinimg.com/736x/8a/ef/e6/8aefe6df2903758df302f97a24976592.jpg" alt="Pagsibol Album">
+          <div class="caption">
+            <strong>Pagsibol</strong><br><br>
+            This album represents growth and emotional maturity. Songs like MAPA show SB19’s deep connection to family, love, and gratitude.
+          </div>
+        </div>
 
-<div class="gallery-item">
-<img src="https://i.pinimg.com/736x/f3/04/6f/f3046f55dccf1614548da6405cca5cce.jpg">
-<p><span>Simula at Wakas</span> – An emotional era that reflects maturity and meaning.</p>
-</div>
+        <div class="gallery-item">
+          <img src="https://i.pinimg.com/736x/ac/06/e4/ac06e4f7b457ea157bb48cce91f1a46f.jpg" alt="Pagtatag Album">
+          <div class="caption">
+            <strong>Pagtatag</strong><br><br>
+            A powerful era that shows confidence and strength. This album highlights SB19’s bold sound, strong message, and global vision.
+          </div>
+        </div>
 
-</div>
+        <div class="gallery-item">
+          <img src="https://i.pinimg.com/1200x/53/4a/c4/534ac42761a86c177946ae2b6000297f.jpg" alt="Simula at Wakas Album">
+          <div class="caption">
+            <strong>SIMULA AT WAKAS</strong><br><br>
+            A story of beginnings and endings. This album reflects SB19’s journey, struggles, success, and their bond with A’TIN.
+          </div>
+        </div>
 
-<footer>
-© 2026 SB19 Fan Blog
-</footer>
+      </div>
+
+    </div>
+  </main>
+
+  <footer>
+    <div class="footer-box">
+      © 2026 SB19 Personal Blog | A Proud A’TIN
+    </div>
+  </footer>
 
 </body>
-
 </html>
-
-
