--- a/blog home.html
+++ b/blog home.html
@@ -7,10 +7,10 @@
 <body style="background-image:url('https://i.pinimg.com/736x/3d/f2/0f/3df20f9d283c611b668fec62179f9283.jpg');">
 
   <nav>
-    <a href="home.html" class="active">Home</a>
-    <a href="posts.html">Posts</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="about.html">About Me</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20home.html" class="active">Home</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
   </nav>
 
   <header>
@@ -54,3 +54,4 @@
 
 </body>
 </html>
+
