--- a/blog post.html
+++ b/blog post.html
@@ -7,7 +7,7 @@
 <body style="background-image:url('https://i.pinimg.com/1200x/51/ea/f9/51eaf9802bde940816a21c0e5a72e31a.jpg');">
 
   <nav>
-    <a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Home</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
     <a href="https://siesie-1819.github.io/html_activity/blog%20post.html" class="active">Posts</a>
     <a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
     <a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
@@ -92,6 +92,7 @@
 
 </body>
 </html>
+
 
 
 
