--- a/blog gallary.html
+++ b/blog gallary.html
@@ -7,10 +7,10 @@
 <body style="background-image:url('https://i.pinimg.com/736x/bd/5a/34/bd5a343cf6c78b509d262e18cbcd94e8.jpg');">
 
   <nav>
-    <a href="home.html">Home</a>
-    <a href="posts.html">Posts</a>
-    <a href="gallery.html" class="active">Gallery</a>
-    <a href="about.html">About Me</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html" class="active">Gallery</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html">About Me</a>
   </nav>
 
   <header>
@@ -62,3 +62,4 @@
 
 </body>
 </html>
+
