--- a/blog abut me.html
+++ b/blog abut me.html
@@ -8,10 +8,10 @@
 <body style="background-image:url('https://i.pinimg.com/1200x/f9/05/16/f90516ce11403da4e73002fd27236f04.jpg');">
 
   <nav>
-    <a href="home.html">Home</a>
-    <a href="posts.html">Posts</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="about.html" class="active">About Me</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20home.html">Home</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20post.html">Posts</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20gallary.html">Gallery</a>
+    <a href="https://siesie-1819.github.io/html_activity/blog%20abut%20me.html" class="active">About Me</a>
   </nav>
 
   <header>
@@ -55,3 +55,4 @@
 
 </body>
 </html>
+
