--- a/bus-home.html
+++ b/bus-home.html
@@ -13,10 +13,10 @@
     </div>
 
     <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="https://siesie-1819.github.io/html_activity/bus-home.html" class="active">Home</a></li>
+        <li><a href="https://siesie-1819.github.io/html_activity/bus-about.html">About</a></li>
+        <li><a href="https://siesie-1819.github.io/html_activity/bus-products.html">Products</a></li>
+        <li><a href="https://siesie-1819.github.io/html_activity/bus-contact.html">Contact</a></li>
     </ul>
 </nav>
 
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+
