--- a/bus-about.html
+++ b/bus-about.html
@@ -13,10 +13,10 @@
     </div>
 
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://siesie-1819.github.io/html_activity/bus-home.html">Home</a></li>
+        <li><a href="https://siesie-1819.github.io/html_activity/bus-about.html" class="active">About</a></li>
+        <li><a href="https://siesie-1819.github.io/html_activity/bus-products.html">Products</a></li>
+        <li><a href="https://siesie-1819.github.io/html_activity/bus-contact.html">Contact</a></li>
     </ul>
 </nav>
 
@@ -77,4 +77,5 @@
 </footer>
 
 </body>
+
 </html>
